--- a/helloWeb/src/main/webapp/todo/calendar.html
+++ b/helloWeb/src/main/webapp/todo/calendar.html
@@ -9,12 +9,7 @@
 <body>
 	<div id="show"></div>
 
-	<script src="calendar.js">
-		// calendar table
-		// makeHead()
-		// makeBody()
-		// makeCalendar();
-	</script>
+	<script src="calendar1.js"></script>
 
 </body>
 
