--- a/helloWeb/src/main/webapp/js/object.html
+++ b/helloWeb/src/main/webapp/js/object.html
@@ -8,8 +8,7 @@
 
 <body>
 	<div id="show"></div>
-	<script src="object.js"></script>
-	<script src="object4.js"></script>
+	<script type="module" src="module.js"></script>
 </body>
 
 </html>
