--- a/helloWeb/src/main/webapp/js/string.html
+++ b/helloWeb/src/main/webapp/js/string.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>js/string.html</title>
 	<script src="string2.js"></script>
+	<script src="string3.js"></script>
 </head>
 
 <body>
