--- a/helloWeb/src/main/webapp/js/ajax.html
+++ b/helloWeb/src/main/webapp/js/ajax.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>js/ajax.html</title>
-	<script type="module" src="ajax1.js"></script>
 </head>
 
 <body>
-
+	<div id="show"></div>
+	<script type="module" src="ajax1.js"></script>
 </body>
 
 </html>
