--- a/helloWeb/src/main/webapp/UI테스트/test1.html
+++ b/helloWeb/src/main/webapp/UI테스트/test1.html
@@ -20,7 +20,7 @@
                 targetAry.push({id: ele.id, first_name: ele.first_name,last_name: ele.last_name, email: ele.email, gender: ele.gender, salary: ele.salary})
             });
 
-            console.log(targetAry);
+            // console.log(targetAry);
 
             for(target of targetAry) {
                 if(target.gender == 'Female' && target.salary > 4500) {
