--- a/helloWeb/src/main/webapp/index.html
+++ b/helloWeb/src/main/webapp/index.html
@@ -17,24 +17,8 @@
 		<li>수박</li>
 		<li>감자</li>
 	</ul>
-	<p>test1</p>
-	<p>test2</p>
-
-	<script>
-		let body = document.querySelector('body');
-		//console.log(body.children[5].children[2].innerHTML = "멜론");
-		//console.log(body.parentElement.innerHTML = "");
-		
-		let li5 = document.createElement('li');
-		li5.innerHTML = '포도';
-		document.querySelector('ul').appendChild(li5);
-		
-		let p3 = document.createElement('p');
-		p3.setAttribute('class', 'third');
-		p3.innerHTML = 'test3';
-		document.querySelector('p:nth-of-type(2)').after(p3);
-				
-	</script>
+	<p>웹이 수정</p>
+	<p>로컬이 수정</p>
 </body>
 
 </html>
