--- a/helloWeb/src/main/webapp/js/kakaoApi.html
+++ b/helloWeb/src/main/webapp/js/kakaoApi.html
@@ -4,14 +4,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>지도</title>
-
 </head>
 
 <body>
 	<!-- 지도를 표시할 div 입니다 -->
 	<div id="map" style="width:100%;height:700px;"></div>
 
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=46ff76ad0b944380d5f5b43fdd9dd2d8"></script>
+	<script type="text/javascript"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=46ff76ad0b944380d5f5b43fdd9dd2d8"></script>
+
 	<script>
 		let href = location.href;
 
@@ -19,7 +20,7 @@
 		let ypos = href.indexOf('&y=') + 3;
 		// console.log(xpos, ypos);
 
-		let lat = href.substring(xpos, ypos-3);
+		let lat = href.substring(xpos, ypos - 3);
 		let lng = href.substring(ypos);
 		// console.log(lat, lng);
 
@@ -29,7 +30,27 @@
 				level: 2 // 지도의 확대 레벨
 			};
 		// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-		var map = new kakao.maps.Map(mapContainer, mapOption); 
+		var map = new kakao.maps.Map(mapContainer, mapOption);
+		var markerPosition = new kakao.maps.LatLng(lat, lng);
+
+		// 마커를 생성합니다
+		var marker = new kakao.maps.Marker({
+			position: markerPosition
+		});
+
+		// 마커가 지도 위에 표시되도록 설정합니다
+		marker.setMap(map);
+
+		var iwContent = '<div style="padding:5px;">Center <br><a href="https://map.kakao.com/link/map/center,' + lat + ',' + lng + '" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/map/center,' + lat + ',' + lng + '" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용
+			iwPosition = new kakao.maps.LatLng(lat, lng); //인포윈도우 표시 위치입니다
+
+		// 인포윈도우를 생성합니다
+		var infowindow = new kakao.maps.InfoWindow({
+			position: iwPosition,
+			content: iwContent
+		});
+		
+		infowindow.open(map, marker); 
 	</script>
 </body>
 
