--- a/helloWeb/src/main/webapp/js/dom.html
+++ b/helloWeb/src/main/webapp/js/dom.html
@@ -2,13 +2,46 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>js/dom.html</title>
+	<meta charset="UTF-8">
+	<title>js/dom.html</title>
+	<style>
+		.center {
+			text-align: center;
+		}
+
+		.pagination {
+			display: inline-block;
+		}
+
+		.pagination a {
+			color: black;
+			float: left;
+			padding: 8px 16px;
+			text-decoration: none;
+			transition: background-color .3s;
+			border: 1px solid #ddd;
+			margin: 0 4px;
+		}
+
+		.pagination a.active {
+			background-color: #4CAF50;
+			color: white;
+			border: 1px solid #4CAF50;
+		}
+
+		.pagination a:hover:not(.active) {
+			background-color: #ddd;
+		}
+	</style>
 </head>
 
 <body>
-    <div id="show"></div>
-    <script type="module" src="dom3.js"></script>
+	<div id="show"></div>
+	<br>
+	<div class="center">
+		<div class="pagination"></div>
+	</div>
+	<script type="module" src="dom3.js"></script>
 </body>
 
 </html>
