--- a/helloJSP/src/main/webapp/student/studentInfo.html
+++ b/helloJSP/src/main/webapp/student/studentInfo.html
@@ -89,8 +89,10 @@
 				<h2>Modal Header</h2>
 			</div>
 			<div class="modal-body">
+				<input type="hidden" name="id">
+				<p>이름&nbsp;<input type="text" name="name"></p>
 				<p>비밀번호&nbsp;<input type="text" name="pass"></p>
-				<p>학과&nbsp;<input type="text" name="dept"></p>
+				<!-- <p>학과&nbsp;<input type="text" name="dept"></p> -->
 				<p>생년월일&nbsp;<input type="date" name="birth"></p>
 			</div>
 			<div class="modal-footer">
