--- a/helloJSP/src/main/webapp/student/studentInfo.html
+++ b/helloJSP/src/main/webapp/student/studentInfo.html
@@ -99,7 +99,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="../js/student.js"></script>
+	<script type="module" src="../js/student.js"></script>
 </body>
 
 </html>
